tests/errors/semantic/blocking/str_join2.py
# pylint: disable=missing-function-docstring, missing-module-docstring
a = " "
b = a.join(["boy","girl"])
